# ireland

./: README.md  download_models.py  interactive.ipynb  load_script.py  matching_data.csv  pyproject.toml  top50_irish_towns_with_coords.csv
data/: analogies.csv
src/: analogy_tests.py  models.py
