[project]
name = "fsds25-analogy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gensim>=4.0.0",
    "geodatasets>=2024.8.0",
    "geopandas>=1.1.1",
    "geopy>=2.4.1",
    "matplotlib>=3.4.0",
    "nltk>=3.9.2",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "requests>=2.26.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "tqdm>=4.62.0",
]
